# DEX-SHELL

./: LICENSE  README.md  requirements.txt
commission_code/: Commission-Code-Breakdown  LICENSE_SIGNATURE.txt  checksum_validator.js  encrypt_layer.cpp  key_generator.py
commission_code/CommissionCore/: README.md  core_signature.py  crypto_engine.py  project_config.json
core/: README.md  config.json  dex_engine.cpp  dex_interface.qml  dex_main.js  dex_runtime.cs  main.py  ui_manager.py
core/templates/: index.html
dataset/: README.md  dataset_manifest.json  dex_ai_core_dataset.csv  dex_command_intelligence.csv  dex_command_usage.csv  dex_environment_context.csv  dex_gesture_telemetry.csv  dex_neural_activity.csv  dex_sign_language.csv  dex_system_telemetry.csv  gesture_mapping_dataset.csv  sound_analysis_dataset.csv  system_response_dataset.csv
interface/layout/: ai_assistant.qml  gestures.qml  main_interface.html  (+4 more)
license_documentation/: API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CONTRIBUTING.md  DEV_GUIDE.md  DEX_LICENSE.txt  LEGAL_README.md  LICENSE.md  NOTICE  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  SYSTEM_SPECS.md
plugins/: README.md  bootstrap.py  extensions.json
sign_language/: CMakeLists.txt  gesture_engine.py  motion_tracker.cpp  motion_tracker_pybind.cpp
sign_language/gesture_reference/: bash_gestures.json  cmd_gestures.json  dex_gestures.json  powershell_gestures.json
sign_language/training_dataset/: gestures_extended_10000.csv  gestures_sample_1000.csv
updates/: update_manager.py  update_manifest.json
(+40 files in other folders)
